--- a/views/src/main/res/values/attrs.xml
+++ b/views/src/main/res/values/attrs.xml
@@ -101,6 +101,7 @@
         <attr name="pinLineColors" format="color" />
         <attr name="pinBackgroundDrawable" format="reference" />
         <attr name="pinBackgroundIsSquare" format="boolean" />
+        <attr name="zp_fontFace"/>
     </declare-styleable>
 
 </resources>
