update 0.2.8 set font and active color

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,8 +68,9 @@
         android:maxLength="6"
         android:textIsSelectable="false"
         android:textSize="16sp"
-        app:pinBackgroundIsSquare="true"
-        app:pinLineStroke="2dp">
+        app:zp_activeColor="@color/normal"
+        app:zp_pinBackgroundIsSquare="true"
+        app:zp_pinLineStroke="2dp">
 
     </com.zarinpal.libs.views.ZarinPinView>
 
