--- a/views/src/main/res/values/attrs.xml
+++ b/views/src/main/res/values/attrs.xml
@@ -87,21 +87,22 @@
     </declare-styleable>
 
     <declare-styleable name="ZarinPinView">
-        <attr name="pinAnimationType" format="enum">
+        <attr name="zp_pinAnimationType" format="enum">
             <enum name="popIn" value="0" />
             <enum name="fromBottom" value="1" />
             <enum name="none" value="-1" />
         </attr>
-        <attr name="pinCharacterMask" format="string" />
-        <attr name="pinRepeatedHint" format="string" />
-        <attr name="pinLineStroke" format="dimension" />
-        <attr name="pinLineStrokeSelected" format="dimension" />
-        <attr name="pinCharacterSpacing" format="dimension" />
-        <attr name="pinTextBottomPadding" format="dimension" />
-        <attr name="pinLineColors" format="color" />
-        <attr name="pinBackgroundDrawable" format="reference" />
-        <attr name="pinBackgroundIsSquare" format="boolean" />
-        <attr name="zp_fontFace"/>
+        <attr name="zp_pinCharacterMask" format="string" />
+        <attr name="zp_pinRepeatedHint" format="string" />
+        <attr name="zp_pinLineStroke" format="dimension" />
+        <attr name="zp_pinLineStrokeSelected" format="dimension" />
+        <attr name="zp_pinCharacterSpacing" format="dimension" />
+        <attr name="zp_pinTextBottomPadding" format="dimension" />
+        <attr name="zp_pinLineColors" format="color" />
+        <attr name="zp_pinBackgroundDrawable" format="reference" />
+        <attr name="zp_pinBackgroundIsSquare" format="boolean" />
+        <attr name="zp_activeColor"/>
+        <attr name="zp_fontFace" />
     </declare-styleable>
 
 </resources>
