--- a/views/src/main/res/layout/zarin_pan_text_view.xml
+++ b/views/src/main/res/layout/zarin_pan_text_view.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="horizontal">
 
         <LinearLayout
             android:id="@+id/layout_one"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/default_bg_pan">
 
             <TextView
                 android:id="@+id/txt_slice_one"
@@ -28,7 +30,10 @@
         <LinearLayout
             android:id="@+id/layout_two"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/default_bg_pan"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="2dp">
 
             <TextView
                 android:id="@+id/txt_slice_two"
@@ -42,7 +47,10 @@
         <LinearLayout
             android:id="@+id/layout_three"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/default_bg_pan"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp">
 
             <TextView
                 android:id="@+id/txt_slice_three"
@@ -56,7 +64,9 @@
         <LinearLayout
             android:id="@+id/layout_four"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:background="@drawable/default_bg_pan">
 
             <TextView
                 android:id="@+id/txt_slice_four"
