--- a/views/src/main/res/values/colors.xml
+++ b/views/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="color_pan_number">#363636</color>
 
     <color name="pin_normal">#6B767E</color>
+
+    <color name="disable_color">#8b8b8b</color>
 </resources>
